--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
+  />
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <link rel="stylesheet" href="iziToast.min.css" />
+  <script src="iziToast.min.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="./css/1-timer.css" />
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,6 +18,30 @@
     <section>
       <a href="./index.html">Go to home</a>
       <h1>Welcome to page 2</h1>
+
+      <input type="text" id="datetime-picker" />
+      <button type="button" data-start>Start</button>
+      <!-- ======================= Select time in the Future
+      =================================================================== -->
+      <div class="timer">
+        <div class="field">
+          <span class="value" data-days>00</span>
+          <span class="label">Days</span>
+        </div>
+        <div class="field">
+          <span class="value" data-hours>00</span>
+          <span class="label">Hours</span>
+        </div>
+        <div class="field">
+          <span class="value" data-minutes>00</span>
+          <span class="label">Minutes</span>
+        </div>
+        <div class="field">
+          <span class="value" data-seconds>00</span>
+          <span class="label">Seconds</span>
+        </div>
+      </div>
+      <!-- =========================================================================== -->
     </section>
     <script type="module" src="./js/1-timer.js"></script>
   </body>
