--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
-  />
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-  <link rel="stylesheet" href="iziToast.min.css" />
-  <script src="iziToast.min.js" type="text/javascript"></script>
-  <link rel="stylesheet" href="./css/1-timer.css" />
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 2</title>
+    <title>Timer</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <link rel="stylesheet" href="iziToast.min.css" />
+    <script src="iziToast.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="./css/1-timer.css" />
   </head>
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 2</h1>
+      <h1>Welcome to Timer!</h1>
 
       <input type="text" id="datetime-picker" />
       <button type="button" data-start>Start</button>
